--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <div class="container-fluid ">
     <a class="navbar-brand text-light" href="#">LOGO PAPERELLA</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
+      <span class="navbar-toggler-icon bg-danger"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
@@ -32,8 +32,8 @@
           <a class="nav-link" aria-disabled="true">Help</a>
         </li>
       </ul>
-      <form class="d-flex" role="search">
-        <input class="form-control me-2" type="Cerca" placeholder="Cerca..." aria-label="Cerca..."/>
+      <form class="d-flex " role="search">
+        <input class="form-control me-2 " type="Cerca" placeholder="Cerca..." aria-label="Cerca..."/>
         <button class="btn btn-outline-light" type="submit">Cerca...</button>
       </form>
     </div>
@@ -44,8 +44,41 @@
     <main>
         <div class="container">
 
-        </div>
+            <div class="row">
+                <div>
+                    <table class="table table-striped">
+                        <thead>
+                            <tr>
+                                <th>Titolo</th>
+                                <th>Stato</th>
+                                <th>Azioni</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td>Nome libro</td>
+                                <td><span class="badge text-bg-success">Disponibile</span></td>
+                                <td><button class="btn btn-outline-secondary">S</button>
+                                    <button class="btn btn-outline-secondary">D</button>
+                                </td>
+                            </tr>
+                             <tr>
+                                <td>Nome libro</td>
+                                <td><span class="badge text-bg-danger">Non disponibile</span></td>
+                                <td><button class="btn btn-outline-secondary">S</button>
+                                    <button class="btn btn-outline-secondary">D</button>
+                                </td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
 
+                <div class="bg-info">
+Hey
+                </div>
+            </div>
+
+        </div>
     </main>
 
 </body>
