--- a/index.html
+++ b/index.html
@@ -43,9 +43,16 @@
     
     <main>
         <div class="container">
-
+<div class="row mt-3">
+    <div class="col-6">
+      <h2 class="fs-4">Catalogo Libri</h2>
+    </div>
+    <div class="col-6">
+      <button class="fs-6 btn btn-primary">Aggiungi Libro</button>
+    </div>
+</div>
             <div class="row">
-                <div>
+                <div class="col">
                     <table class="table table-striped">
                         <thead>
                             <tr>
