--- a/index.html
+++ b/index.html
@@ -49,11 +49,11 @@
     
     <main>
         <div class="container">
-            <!-- Inizio macro-griglia -->
-           <div class="row">
+            <!-- Inizio macro-griglia (catalogo + Todo\FAQ) -->
+           <div class="row mt-4">
             <!-- Colonna catalogo -->
                 
-                <div class="col-lg-9">
+                <div class="col-lg-9 mb-1">
                     <!-- mini-griglia per header catalogo-->
                     <header class="row">
                         <div class="col-6">
@@ -96,7 +96,7 @@
                 <!-- Colonna form e Accordion-->
                 <div class="col-lg-3">
                     <!-- Card del form-->
-                     <div class="card">
+                     <div class="card mb-4">
                        <div class="card-header ps-4">
                          <h3 class="my-1">To do list</h3>
                     </div>
@@ -109,7 +109,7 @@
                     </div>
                 </div>
                     <!-- Card Accordion -->
-                     <div class="card">
+                     <div class="card mb-4">
                         <div class="card-header ps-4">
                            <h3 class="my-1">F.A.Q.</h3>
                         </div>
