Add new book page

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                             <h2 class="fs-2 m-0">Catalogo Libri</h2>
                         </div>
                         <div class="text-end">
-                            <button class="fs-6 btn btn-primary">Aggiungi Libro</button>
+                            <a class="fs-6 btn btn-primary" href="./new-book.html">Aggiungi Libro</a>
                         </div>
                 </header>
                     
