--- a/new-book.html
+++ b/new-book.html
@@ -68,7 +68,7 @@
             </div>
 
             <div class="row mb-4 g-4">
-                <div class="col-md-4"> 
+                <div class="col-lg-4"> 
                     <label class="form-label fw-semibold" for="book-genre">Genere</label>
                     <select class="form-select fw-semibold">
                         <option class="fw-semibold" selected>Scegli genere</option>
@@ -79,11 +79,11 @@
                         <option value="Saggistica">Saggistica</option>
                     </select>
                 </div>
-                <div class="col-md-4">
+                <div class="col-lg-4">
                     <label class="form-label fw-semibold" for="book-release-year">Anno di pubblicazione</label>
                     <input class="form-control" type="number" id="book-release-year" name="book-release-year" placeholder="Inserisci anno">
                 </div>
-                <div class="col-md-4">
+                <div class="col-lg-4">
                     <label class="form-label fw-semibold" for="book-isbn">#ISBN</label>
                     <input class="form-control" type="text" id="book-isbn" name="book-isbn" placeholder="Inserisci codice">
                 </div>
