Add attributes name e id to select input

--- a/new-book.html
+++ b/new-book.html
@@ -73,7 +73,7 @@
             <div class="row mb-4 g-4">
                 <div class="col-lg-4"> 
                     <label class="form-label fw-semibold" for="book-genre">Genere</label>
-                    <select class="form-select fw-semibold">
+                    <select class="form-select fw-semibold" name="book-genre" id="book-genre">
                         <option class="fw-semibold" selected>Scegli genere</option>
                         <option value="Avventura">Avventura</option>
                         <option value="Horror">Horror</option>
